--- a/.github/workflows/github_CICD.yaml
+++ b/.github/workflows/github_CICD.yaml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Run unravel github client script
       run: |
-        python unravel_github_client.py
+        python github_cicd_python.py
 
       env:
         PR_NUMBER: ${{ github.event.pull_request.number }}
