--- a/.github/workflows/github_CICD.yaml
+++ b/.github/workflows/github_CICD.yaml
@@ -16,7 +16,7 @@ jobs:
         run: |
           pr_number=$(echo ${{ github.ref }} | awk -F'/' '{print $3}')
           pr_url="https://github.com/${{ github.repository }}/pull/${pr_number}"
-          PR_USER_EMAIL=$(curl -s -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
+          PR_USER_EMAIL=$(curl -s -H "Authorization: Bearer ${{ secrets.Github_CICD }}" \
               "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls/$PR_NUMBER" \
               | jq --raw-output .user.email)
           COMMIT_SHA=$(jq --raw-output .pull_request.head.sha "$GITHUB_EVENT_PATH")
@@ -47,6 +47,6 @@ jobs:
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
           GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.Github_CICD }}
           REPO_OWNER: ${{ github.repository_owner }}
           #API_ENDPOINT: ${{ secrets.API_ENDPOINT }}
